# matrixssl

./: .gitattributes  .gitignore  Makefile.am  README.md  autogen.sh  bootstrap.sh  common.mk  configure.ac  configure.m4  corepath.mk  corepath.mk.in  gen_core_makefile_am.awk  gen_crypto_makefile_am.awk  gen_matrixssl_makefile_am.awk  generate_makefile_am.sh  makefile.am
apps/: makefile.am
apps/common/: Makefile  makefile.am
apps/dtls/: GNUmakefile.in  Makefile  makefile.am
apps/ssl/: GNUmakefile.in  Makefile  client.c  makefile.am  net.c  server.c
core/: GNUmakefile  Makefile.inc  makefile.am
core/include/: psUtil.h  psbuf.h
core/makefiles/: detect-and-rules.mk  get_CCARCH.mk  rules.mk
core/osdep/include/: osdep-types.h
crypto/: GNUmakefile.am  GNUmakefile.in  Makefile  makefile.am  makefile.inc  makefile_ltlibs.inc
crypto/crypto_sign/: ps_ed25519.h
crypto/scalarmult/: ps_x25519.h
crypto/symmetric/: aes_matrix.h
matrixssl/: GNUmakefile.am  GNUmakefile.in  makefile.am  matrixssl.c  matrixsslApi.c  matrixsslApi.h  matrixsslInitVer.c  matrixsslKeys.c  psk.c  tls.c  tls13DecodeExt.c  tls13Psk.c  tlsSelectKeys.c
